--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,7 @@ textarea{
     width:734px;
     height: 110px;
     background: #f2f6fe;
-    left：35px;
+    left:35px;
     position:relative;
         }
 .product select{
